--- a/public/game.html
+++ b/public/game.html
@@ -33,13 +33,12 @@
        Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
        For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  <script src="js/libs/jquery-1.6.2.min.js"></script>
   <script src="js/libs/crafty-0.4.2.min.js"></script>
-  <script src="js/assassin.js"></script>
+  <script src="js/game.js"></script>
 </head>
 
 <body>
-
   <div id="container">
     <header>
       <h2>This is the game</h2>
@@ -49,19 +48,12 @@
     <footer>
 
     </footer>
-  </div> <!--! end of #container -->
-
+  </div>
 
   <!-- JavaScript at the bottom for fast page loading -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-
-
   <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
   <!-- end scripts-->
-
 </body>
 </html>
