--- a/public/game.html
+++ b/public/game.html
@@ -7,53 +7,44 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <title></title>
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <!-- CSS: implied media=all -->
-  <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- end CSS-->
-
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except for Modernizr / Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
   <script src="js/libs/jquery-1.6.2.min.js"></script>
   <script src="js/libs/crafty-0.4.2.min.js"></script>
-  <script src="js/game.js"></script>
+  <script src="js/mylibs/song.js"></script>
+  <!-- <script src="js/mylibs/game.js"></script> -->
+  <script>
+    // get_songs();
+  </script>
 </head>
 
 <body>
   <div id="container">
     <header>
-      <h2>This is the game</h2>
+      <h2>The game</h2>
     </header>
     <div id="main" role="main">
+      <audio id="the-audio" src="music/Tromboon-sample.ogg" controls preload></audio>
+      <form id="the-form">
+        <input type="input" value="dude">
+      </form>
+      <div id="songplayer"></div>
     </div>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </div>
 
-  <!-- JavaScript at the bottom for fast page loading -->
-  <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
-  <!-- end scripts-->
+  <script>
+    $("#the-audio").bind('timeupdate', function() {
+      console.log('current:' + this.currentTime + ', duration:' + this.duration);
+    });
+  </script>
 </body>
 </html>
