added song analysis  link retrieval function, data.js

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
 <link rel="stylesheet" type="text/css" href="css/flashblock.css" />
 
 <script type="text/javascript" src="js/soundmanager2.js"></script>
+<script type="text/javascript" src="js/data.js"></script>
 
+<script type="text/javascript" src="js/ben.js"></script>
 <script type="text/javascript" src="js/inlineplayer.js"></script>
 
 
