Put cr stage on top of the audio tag.

--- a/public/game.html
+++ b/public/game.html
@@ -30,6 +30,7 @@
       <h2>The game</h2>
     </header>
     <div id="main" role="main">
+      <div id="cr-stage"></div>
       <audio id="the-audio" src="music/Tromboon-sample.ogg" controls preload></audio>
     </div>
     <footer></footer>
