--- a/public/game.html
+++ b/public/game.html
@@ -40,13 +40,21 @@
   <script defer src="js/script.js"></script>
   <script>
     var segments = data.segments;
+    var events = [];
+    for (var i in segments) {
+      if (segments[i].confidence > 0.5) {
+        var start_time = segments[i].start;
+        var loudness = segments[i].loudness_max;
+        var results = [start_time, loudness];
+        events.push(results);
+      }
+    }
     $("#the-audio").bind('timeupdate', function() {
       // console.log('current:' + this.currentTime + ', duration:' + this.duration);
-      var time = ~~(this.currentTime);
-      if (segments[time]) {
-        // console.log(segments[time]);
-        console.log(segments[time].loudness_max);
-        delete segments[time];
+      var time = this.currentTime;
+      if (time > events[0][0]) {
+        console.log(events[0]+"");
+        events.shift();
       }
     });
     $("#the-audio").bind('play', function() {
