some css and sprites added

--- a/public/game.html
+++ b/public/game.html
@@ -28,7 +28,7 @@
 <body>
   <div id="container">
     <header>
-      <h2>The game</h2>
+      <center><h2>The game</h2></center>
     </header>
     <div id="main" role="main">
       <div id="cr-stage"></div>
