--- a/public/index.html
+++ b/public/index.html
@@ -7,93 +7,79 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/b/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <title></title>
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <!-- CSS: implied media=all -->
-  <!-- CSS concatenated and minified via ant build script-->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- end CSS-->
-
-<link rel="stylesheet" type="text/css" href="css/inlineplayer.css" />
-
-<link rel="stylesheet" type="text/css" href="css/flashblock.css" />
-
-<script type="text/javascript" src="js/soundmanager2.js"></script>
-<script type="text/javascript" src="js/data.js"></script>
-
-<script type="text/javascript" src="js/ben.js"></script>
-<script type="text/javascript" src="js/inlineplayer.js"></script>
-
-
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except for Modernizr / Respond.
-       Modernizr enables HTML5 elements & feature detects; Respond is a polyfill for min/max-width CSS3 Media Queries
-       For optimal performance, use a custom Modernizr build: www.modernizr.com/download/ -->
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
+  <script src="js/libs/jquery-1.6.2.min.js"></script>
+  <script src="js/libs/crafty-0.4.2.min.js"></script>
+  <script src="js/mylibs/song.js"></script>
+  <script src="js/mylibs/game.js"></script>
+  <script type="text/javascript" src="js/data.js"></script>
 </head>
 
 <body>
-
   <div id="container">
     <header>
-
+      <center><h2>Zombie Defense</h2></center>
     </header>
     <div id="main" role="main">
-
-    <div id="search">
-
-<form id="search_form" action="" method="get">
- <label for="artist">artist</label><input type="text" name="artist" value="" id="artist">
-<label for="title">title</label><input type="text" name="title"  id="title"> 
-
-<input id="song_input" value="find songs" type="submit" />   
-</form>
-</div>
-<div id="choices">
-    
-</div>
-  <div id="sm2-container">
-
-  <!-- SM2 flash goes here -->
-
+      <div id="cr-stage"></div>
+      <div class="strobe"></div>
+      <audio id="the-audio" src="data/prison-song.mp3" controls preload></audio>
+    </div>
+    <footer></footer>
   </div>
-  <div id="player">
-    <ul class="graphic">
-    
-    </ul>
-  </div>
-
-</div>
-    <footer>
-
-    </footer>
-  </div> <!--! end of #container -->
-
-
-  <!-- JavaScript at the bottom for fast page loading -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-
-
-  <!-- scripts concatenated and minified via ant build script-->
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
-  <!-- end scripts-->
+  <script>
+    var segments = data.segments;
+    var events = [];
+    for (var i in segments) {
+      if (segments[i].confidence > 0.5) {
+        var start_time = segments[i].start;
+        var loudness = segments[i].loudness_max;
+        var results = [start_time, loudness];
+        events.push(results);
+      }
+    }
+    var $strobe = $(".strobe");
+    var $audio = $("#the-audio")[0];
+
+    // timeupdate is once every 250ms or so. Better way would be to use
+    // setInterval and polling as a way of checking the current time.
+    $("#the-audio").bind('timeupdate', function() {});
+
+    setInterval(function() {
+      var time = $audio.currentTime;
+      $strobe.css({ 'background-color': 'black' });
+      if (time > events[0][0]) {
+        console.log(events[0]+"");
+        var amplitude = events[0][1];
+        if (amplitude > -10) {
+          console.log('MORE ZOMBIES');
+          Defense.spawnZombies(3,5);
+          $strobe.css({ 'background-color': 'white' });
+        }
+        events.shift();
+      }
+    }, 100);
+    $("#the-audio").bind('play', function() {
+      console.log('Song playing. Game unpaused:' + Crafty._paused);
+      if (Crafty._paused === true) {
+        Crafty.pause();
+      }
+    });
+    $("#the-audio").bind('pause', function() {
+      console.log('Song paused. Game paused:' + Crafty._paused);
+      if (Crafty._paused === false || typeof Crafty._paused === 'undefined') {
+        Crafty.pause();
+      }
+    });
+  </script>
 </body>
 </html>
