--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
     // timeupdate is once every 250ms or so. Better way would be to use
     // setInterval and polling as a way of checking the current time.
-    $("#the-audio").bind('timeupdate', function() {});
+    // $("#the-audio").bind('timeupdate', function() {});
 
     setInterval(function() {
       var time = $audio.currentTime;
