added .ogg and changed audio to .ogg, fixed main gifs

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
   <script src="js/libs/crafty-0.4.2.min.js"></script>
   <script src="js/mylibs/song.js"></script>
   <script src="js/mylibs/game.js"></script>
+  <script src="http://api.html5media.info/1.1.4/html5media.min.js"></script>
   <script type="text/javascript" src="js/data.js"></script>
 </head>
 
@@ -32,7 +33,7 @@
         <canvas id="dude-canvas"></canvas>
       </div>
       <div class="strobe"></div>
-      <audio id="the-audio" src="data/prison-song.mp3" controls preload></audio>
+      <audio id="the-audio" src="data/prison-song.ogg" controls preload></audio>
     </div>
     <footer></footer>
   </div>
