--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
   <script src="js/libs/jquery-1.6.2.min.js"></script>
-  <script src="js/libs/crafty-0.4.2.min.js"></script>
+  <script src="js/libs/crafty-0.4.2.js"></script>
   <script src="js/mylibs/song.js"></script>
   <script src="js/mylibs/game.js"></script>
   <script type="text/javascript" src="js/data.js"></script>
