Add disclaimer to bottom.

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       <div class="strobe"></div>
       <audio id="the-audio" src="data/prison-song.ogg" controls preload></audio>
     </div>
-    <footer></footer>
+    <footer>Note: HTML5 Audio required for game to function correctly. Chrome is recommended.</footer>
   </div>
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
