Show score at end of game.

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <div id="main" role="main">
       <div id="cr-stage">
         <div id="game-over">Game Over</div>
+        <div id="game-over-score">Score: <span id="score-num">0</span></div>
         <div id="wave-indicator">Wave <span id="wave-num">0</span></div>
         <canvas id="dude-canvas"></canvas>
       </div>
