--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
       if (time > events[0][0]) {
         // console.log(events[0]+"");
         var amplitude = events[0][1];
-        if (amplitude > -5) {
+        if (amplitude >= -5) {
           Defense.spawnZombies(1,2);
           // $strobe.css({ 'background-color': 'white' });
           $lightning.css({ 'opacity': 0.4 });
