Make the intro page a little better.

--- a/public/index.html
+++ b/public/index.html
@@ -31,16 +31,15 @@
       <div id="cr-stage">
         <div id="intro-page">
           <p><h3>ZomBeat Defense</h3></p>
-          <p>
-            <p>Instructions:</p>
+          <div id="intro-instructions">
             <ul>
-              <li>Arrow keys or WASD to move. Mouse to aim. Space to shoot.</li>
               <li>Survive waves of enemies until the end of the song.</li>
               <li>Zombies spawn and gain powerups to the beat.</li>
-              <li>Good luck!</li>
+              <li>Waves change when the song transitions.</li>
+              <li>Arrow keys or WASD to move. Mouse to aim. Space to shoot.</li>
             </ul>
-            <button id="play-button">Play!</button>
-          </p>
+          </div>
+          <button id="play-button">Play!</button>
         </div>
         <div id="game-over">Game Over</div>
         <div id="game-over-score">Score: <span id="score-num">0</span></div>
