--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <div id="intro-instructions">
             <ul>
               <li>Survive waves of enemies until the end of the song.</li>
-              <li>Zombies spawn and gain powerups to the beat.</li>
+              <li>Zombies spawn and become stronger with each beat.</li>
               <li>Waves change when the song transitions.</li>
               <li>Arrow keys or WASD to move. Mouse to aim. Space to shoot.</li>
             </ul>
