--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <script src="js/libs/crafty-0.4.2.js"></script>
   <script src="js/mylibs/song.js"></script>
   <script src="js/mylibs/game.js"></script>
-  <script type="text/javascript" src="js/data.js"></script>
+  <script type="text/javascript" src="js/superbeast_data.js"></script>
 </head>
 
 <body>
@@ -48,7 +48,7 @@
         <canvas id="dude-canvas"></canvas>
       </div>
       <div class="strobe"></div>
-      <audio id="the-audio" src="data/prison-song.ogg" controls preload></audio>
+      <audio id="the-audio" src="data/superbeast.ogg" controls preload></audio>
     </div>
     <footer>Note: HTML5 Audio required for game to function correctly. Chrome is recommended.</footer>
   </div>
