Show kills at game over. You win after surviving the song.

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
         </div>
         <div id="game-over">Game Over</div>
         <div id="game-over-score">Score: <span id="score-num">0</span></div>
+        <div id="game-over-kills">Kills: <span id="kills-num">0</span></div>
         <div id="wave-indicator">Wave <span id="wave-num">0</span></div>
         <div id="unsupported">
           <p>Sorry, but HTML5 Audio is required to play :(</p>
