--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,9 @@
         <canvas id="dude-canvas"></canvas>
       </div>
       <div class="strobe"></div>
+      <div id="song-info">
+        <span id="song-current-time">00:00</span>
+      </div>
       <audio id="the-audio" src="data/superbeast.ogg" controls preload></audio>
     </div>
     <footer>Note: HTML5 Audio required for game to function correctly. Chrome is recommended.</footer>
