Disable audio controls.

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
       <div id="song-info">
         <span id="song-current-time">00:00</span>
       </div>
-      <audio id="the-audio" src="data/superbeast.ogg" controls preload></audio>
+      <audio id="the-audio" src="data/superbeast.ogg" preload></audio>
     </div>
     <footer>Note: HTML5 Audio required for game to function correctly. Chrome is recommended.</footer>
   </div>
