--- a/public/index.html
+++ b/public/index.html
@@ -46,8 +46,8 @@
         <div id="game-over-kills">Kills: <span id="kills-num">0</span></div>
         <div id="wave-indicator">Wave <span id="wave-num">0</span></div>
         <div id="unsupported">
-          <p>Sorry, but HTML5 Audio is required to play :(</p>
-          <p>Try using <a href="http://www.google.com/chrome">Chrome</a> or <a href="http://www.mozilla.org/en-US/firefox/new">Firefox</a></p>
+          <p>Sorry, HTML5 Audio is required to play :(</p>
+          <p>Try using a different browser like <a href="http://www.google.com/chrome">Chrome</a> or <a href="http://www.mozilla.org/en-US/firefox/new">Firefox</a></p>
         </div>
         <canvas id="dude-canvas"></canvas>
       </div>
@@ -57,7 +57,7 @@
       </div>
       <audio id="the-audio" src="data/superbeast.ogg" preload></audio>
     </div>
-    <footer>Note: HTML5 Audio required for game to function correctly. Chrome is recommended.</footer>
+    <footer>Note: HTML5 Audio required for game to function correctly. <a href="http://www.google.com/chrome">Chrome</a> is recommended.</footer>
   </div>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
