--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
             <ul>
               <li>Survive waves of enemies until the end of the song.</li>
               <li>Zombies spawn and become stronger with each beat.</li>
-              <li>Waves change when the song transitions.</li>
-              <li>Arrow keys or WASD to move. Mouse to aim. Space to shoot.</li>
+              <li>Stronger waves start at song transitions.</li>
+              <li>Arrow keys or WASD to move. Mouse to aim. Left-Click or Space to shoot.</li>
             </ul>
           </div>
           <button id="play-button">Play!</button>
