--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="js/libs/modernizr-2.0.6.min.js"></script>
-  <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.js"></script>-->
-  <script src="js/libs/jquery-1.6.2.min.js"></script>
-  <script src="js/libs/crafty-0.4.2.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <!--<script src="js/libs/jquery-1.6.2.min.js"></script>-->
+  <!--<script src="js/libs/crafty-0.4.2.min.js"></script>-->
+  <script src="js/libs/crafty-0.4.2.min.js"></script>
   <script src="js/mylibs/song.js"></script>
   <script src="js/mylibs/game.js"></script>
   <script type="text/javascript" src="js/superbeast_data.js"></script>
